Refactor: Replace .collect(Collectors.toList()) with .toList() Java 16+ syntax